--- a/Capstone_tidy.html
+++ b/Capstone_tidy.html
@@ -130,6 +130,7 @@ library(readr)
 library(readxl)
 library(magrittr)
 library(stringi)
+library(knitr)
 
 # Import raw data as objects, remove rows w/o observations #
 crime_13_raw &lt;- read_excel(&quot;Raw Data/2013 Crime Data/Table_8_Offenses_Known_to_Law_Enforcement_by_State_by_City_2013.xls&quot;, skip = 2)
